# ifc-viewer-anywidget

./: .gitignore  LICENSE  README.md  biome.json  pyproject.toml
ifc_anywidget/: __init__.py  index.css  index.js
src/ifc_anywidget/: __init__.py  index.js
tests/: test_jupyter.ipynb  test_marimo.py  viewer_test.ipynb
