[project]
name = "ifc-anywidget"
description = "IFC viewer AnyWidget using That Open Company Open BIM Components"
authors = [{ name = "sanzoghenzo" }]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
license = { file = "LICENSE" }
dependencies = ["anywidget>=0.9.18", "ifcopenshell>=0.8.2"]

[project.urls]
Source = "https://github.com/sanzoghenzo/ifc-anywidget"

[dependency-groups]
dev = ["ipykernel>=6.29.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
build = { include = [
    "/ifc_anywidget",
], artifacts = [
    "ifc_anywidget/index.js",
    "ifc_anywidget/index.css",
] }
metadata = { allow-direct-references = true }
version = { path = "ifc_anywidget/__init__.py" }
