[project]
name = "ifc-anywidget"
description = "IFC viewer AnyWidget using That Open Company Open BIM Components"
authors = [{ name = "sanzoghenzo" }]
readme = "README.md"
requires-python = ">=3.10"
version = "0.4.0"
license = { file = "LICENSE" }
dependencies = ["anywidget>=0.11.0", "ifcopenshell>=0.8.2"]

[project.urls]
Source = "https://github.com/sanzoghenzo/ifc-viewer-anywidget"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "marimo>=0.23.6",
    "notebook>=7.5.6",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"
